--- a/packages/flue3/example/package.json
+++ b/packages/flue3/example/package.json
@@ -2,5 +2,10 @@
     "scripts": {
         "dev": "flue3 dev",
         "build": "flue3 build"
+    },
+    "devDependencies": {
+        "dotenv": "^16.0.3",
+        "flue3": "file:./..",
+        "@flue3/head": "file:./../../head"
     }
 }
