--- a/packages/flue3/package.json
+++ b/packages/flue3/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flue3",
-    "version": "0.0.2-dev.0",
+    "version": "0.0.4-dev.0",
     "description": "flue3 SSR framework based on Vite",
     "author": "FL3NKEY",
     "homepage": "https://github.com/FL3NKEY/flue3",
@@ -25,9 +25,12 @@
         "@vitejs/plugin-vue": "3.2.0",
         "copyfiles": "2.4.1",
         "deepmerge": "4.2.2",
+        "esbuild": "0.15.15",
+        "esbuild-plugin-alias": "0.2.1",
         "h3": "1.0.1",
         "listhen": "1.0.0",
         "mri": "1.2.0",
+        "sass": "1.56.1",
         "serve-static": "1.15.0",
         "vite": "3.2.4",
         "vite-plugin-progress": "0.0.6",
@@ -36,5 +39,8 @@
     "devDependencies": {
         "@types/copyfiles": "2.4.1",
         "@types/serve-static": "1.15.0"
+    },
+    "engines": {
+        "node": ">=16.0.0"
     }
 }
