--- a/packages/flue3/package.json
+++ b/packages/flue3/package.json
@@ -28,9 +28,12 @@
         "esbuild": "0.15.15",
         "esbuild-plugin-alias": "0.2.1",
         "h3": "1.0.1",
+        "http-proxy": "^1.18.1",
         "listhen": "1.0.0",
         "mri": "1.2.0",
+        "node-fetch": "3.3.0",
         "sass": "1.56.1",
+        "serialize-error": "11.0.0",
         "serve-static": "1.15.0",
         "vite": "3.2.4",
         "vite-plugin-progress": "0.0.6",
@@ -38,6 +41,7 @@
     },
     "devDependencies": {
         "@types/copyfiles": "2.4.1",
+        "@types/http-proxy": "^1.17.9",
         "@types/serve-static": "1.15.0"
     },
     "engines": {
