--- a/packages/router/tsconfig.json
+++ b/packages/router/tsconfig.json
@@ -13,6 +13,7 @@
         "declaration": true,
     },
     "files": [
-        "./src/head.ts",
+        "./router.d.ts",
+        "./src/router.ts"
     ],
 }
