--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "eslint-config-fl3nkey-typescript": "1.0.1",
         "eslint-config-fl3nkey-vue3": "1.0.3",
         "lerna": "6.0.3",
+        "rimraf": "4.0.7",
         "ts-node": "10.9.1",
         "tsc-watch": "5.0.3",
         "typescript": "4.9.3"
