another so much features and fixes

--- a/packages/flue3/tsconfig.json
+++ b/packages/flue3/tsconfig.json
@@ -21,12 +21,8 @@
     },
     "files": [
         "./flue3.d.ts",
-        "./src/index.ts",
-        "./src/cli.ts",
-        "./src/framework.ts",
-        "./src/app/createApp.ts",
-        "./src/app/entryClient.ts",
-        "./src/app/entryServer.ts",
-        "./src/app/server.ts",
     ],
+    "include": [
+        "./src/**/*"
+    ]
 }
