--- a/packages/router/tsconfig.json
+++ b/packages/router/tsconfig.json
@@ -14,6 +14,8 @@
     },
     "files": [
         "./router.d.ts",
-        "./src/router.ts"
     ],
+    "include": [
+        "./src/**/*"
+    ]
 }
