--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "install": "lerna exec npm install",
         "build": "lerna run build",
         "version": "lerna version --no-push --no-commit-hooks --no-git-tag-version",
-        "publish": "lerna exec npm publish"
+        "publish": "lerna exec npm publish",
+        "docs:dev": "vitepress dev docs",
+        "docs:build": "vitepress build docs",
+        "docs:preview": "vitepress preview docs"
     },
     "devDependencies": {
         "@types/node": "18.11.9",
@@ -19,6 +22,8 @@
         "rimraf": "4.0.7",
         "ts-node": "10.9.1",
         "tsc-watch": "5.0.3",
-        "typescript": "4.9.3"
+        "typescript": "4.9.3",
+        "vitepress": "1.0.0-alpha.38",
+        "vue": "3.2.45"
     }
 }
