--- a/.github/workflows/deployDocs.yml
+++ b/.github/workflows/deployDocs.yml
@@ -2,8 +2,9 @@ name: DeployDocs
 
 on:
     push:
-        branches:
-            - master
+        branches: [origin]
+    pull_request:
+        branches: [origin]
 
 jobs:
     deploy:
@@ -15,7 +16,9 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: 16
-            - run: npm install
+
+            - name: Install
+              run: npm install
 
             - name: Build
               run: npm run docs:build
