--- a/packages/head/package.json
+++ b/packages/head/package.json
@@ -22,7 +22,7 @@
         "@vueuse/head": "1.0.16"
     },
     "devDependencies": {
-        "flue3": "*"
+        "flue3": "0.0.20-dev.0"
     },
     "publishConfig": {
         "access": "public"
