--- a/.github/workflows/deployDocs.yml
+++ b/.github/workflows/deployDocs.yml
@@ -30,4 +30,4 @@ jobs:
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_dir: docs/.vitepress/dist
-                  # cname: flue3.fl3nkey.com
+                  cname: flue3.fl3nkey.com
