--- a/packages/flue3/package.json
+++ b/packages/flue3/package.json
@@ -29,7 +29,8 @@
         "esbuild": "0.15.15",
         "esbuild-plugin-alias": "0.2.1",
         "h3": "1.0.1",
-        "http-proxy": "^1.18.1",
+        "hookable": "5.4.2",
+        "http-proxy": "1.18.1",
         "listhen": "1.0.0",
         "mri": "1.2.0",
         "node-fetch": "3.3.0",
