--- a/packages/flue3/package.json
+++ b/packages/flue3/package.json
@@ -28,6 +28,7 @@
         "deepmerge": "4.2.2",
         "esbuild": "0.15.15",
         "esbuild-plugin-alias": "0.2.1",
+        "fs-extra": "11.1.0",
         "h3": "1.0.1",
         "hookable": "5.4.2",
         "http-proxy": "1.18.1",
@@ -43,6 +44,7 @@
     },
     "devDependencies": {
         "@types/copyfiles": "2.4.1",
+        "@types/fs-extra": "11.0.1",
         "@types/http-proxy": "1.17.9",
         "@types/serve-static": "1.15.0"
     },
