add router docs

--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@flue3/router",
-    "version": "0.0.20-dev.0",
+    "version": "0.0.21-dev.0",
     "description": "flue3 <head> tag manager plugin",
     "author": "FL3NKEY",
     "homepage": "https://github.com/FL3NKEY/flue3",
@@ -19,11 +19,12 @@
         "url": "https://github.com/FL3NKEY/flue3/issues"
     },
     "devDependencies": {
-        "flue3": "0.0.20-dev.0",
+        "flue3": "^0.0.21-dev.0",
         "vue": "3.2.45"
     },
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
     },
     "dependencies": {
         "vue-router": "4.1.6"
