--- a/packages/flue3/package.json
+++ b/packages/flue3/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flue3",
-    "version": "0.0.20-dev.0",
+    "version": "0.0.21-dev.0",
     "description": "flue3 SSR framework based on Vite",
     "author": "FL3NKEY",
     "homepage": "https://github.com/FL3NKEY/flue3",
@@ -35,20 +35,24 @@
         "listhen": "1.0.0",
         "mri": "1.2.0",
         "node-fetch": "3.3.0",
+        "rollup-plugin-progress": "1.1.2",
         "sass": "1.56.1",
         "serialize-error": "11.0.0",
         "serve-static": "1.15.0",
         "vite": "3.2.4",
-        "vite-plugin-progress": "0.0.6",
         "vue": "3.2.45"
     },
     "devDependencies": {
         "@types/copyfiles": "2.4.1",
         "@types/fs-extra": "11.0.1",
         "@types/http-proxy": "1.17.9",
+        "@types/rollup-plugin-progress": "^1.1.1",
         "@types/serve-static": "1.15.0"
     },
     "engines": {
         "node": ">=16.0.0"
+    },
+    "publishConfig": {
+        "registry": "https://registry.npmjs.org/"
     }
 }
