--- a/packages/flue3/package.json
+++ b/packages/flue3/package.json
@@ -4,7 +4,7 @@
     "description": "flue3 SSR framework based on Vite",
     "author": "FL3NKEY",
     "homepage": "https://github.com/FL3NKEY/flue3",
-    "license": "ISC",
+    "license": "MIT",
     "main": "lib/index.js",
     "type": "module",
     "scripts": {
@@ -34,6 +34,7 @@
         "http-proxy": "1.18.1",
         "listhen": "1.0.0",
         "mri": "1.2.0",
+        "mustache": "4.2.0",
         "node-fetch": "3.3.0",
         "rollup-plugin-progress": "1.1.2",
         "sass": "1.56.1",
@@ -46,6 +47,7 @@
         "@types/copyfiles": "2.4.1",
         "@types/fs-extra": "11.0.1",
         "@types/http-proxy": "1.17.9",
+        "@types/mustache": "4.2.2",
         "@types/rollup-plugin-progress": "^1.1.1",
         "@types/serve-static": "1.15.0"
     },
